correct issue with loading the script on mobileNavBar

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -143,8 +143,6 @@ address {
 .plus {
   position: relative;
   margin-left: 3.25rem;
-  /*makes text stay under the navbar*/
-  z-index: -1;
 }
 
 .plus:before {
@@ -204,6 +202,7 @@ nav {
   padding: 1.25em;
   overflow: hidden;
   background: white;
+  z-index: 1000;
 }
 nav .mobile-header {
   display: none;
@@ -256,7 +255,7 @@ nav .logo {
     transition: box-shadow 0.3s linear 0s;
     display: flex;
     flex-direction: column;
-    padding: 1.25rem 2rem
+    padding: 1.25rem 2rem;
   }
 
   nav ul {
